# DATN_YZMediaAI

find-face/: .env  .gitignore  docker-compose.yml  init_model.py  postman.json  pyproject.toml
find-face/app/: helper.py  logger.py  main.py  settings.py
find-face/app/analyze/: __init__.py  analyze_image.py
find-face/app/cloud_service/: __init__.py  cloud_service.py
find-face/app/database/: init.py  models.py  wait.py
find-face/dockerfiles/: app.Dockerfile
