
[tool.poetry]
name = "face-api"
version = "0.1.0"
description = "A Face"
authors = []
readme = ""

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.6"
mxnet = "==1.6.0"
insightface = "==0.7.3"
fastapi = "==0.62.0"
uvicorn = "==0.13.0"
python-multipart = "==0.0.5"
sqlalchemy = "==1.3.20"
datetime = "==4.3"
typing = "==3.7.4.3"
python-dotenv = "==0.15.0"
numpy = "==1.23.1"
onnxruntime ="==1.18.0"
easyocr ="==1.7.1"
requests = "==2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"